@@ -1,5 +1,17 @@
 2012-02-22  Sheriff Bot  <webkit.review.bot@gmail.com>
 
+        Unreviewed, rolling out r108456.
+        http://trac.webkit.org/changeset/108456
+        https://bugs.webkit.org/show_bug.cgi?id=79223
+
+        Broke fast/regex/pcre-test-4.html and cannot find anyone on
+        IRC (Requested by zherczeg on #webkit).
+
+        * yarr/YarrJIT.cpp:
+        (JSC::Yarr::YarrGenerator::backtrackPatternCharacterGreedy):
+
+2012-02-22  Sheriff Bot  <webkit.review.bot@gmail.com>
+
         Unreviewed, rolling out r108468.
         http://trac.webkit.org/changeset/108468
         https://bugs.webkit.org/show_bug.cgi?id=79219
